@@ -807,7 +807,12 @@ namespace System.IO
 			Dispose (false);
 		}
 
-		protected virtual void Dispose (bool disposing) {
+#if NET_2_0
+		protected override void Dispose (bool disposing)
+#else
+		protected virtual void Dispose (bool disposing)
+#endif
+		{
 			if (handle != MonoIO.InvalidHandle) {
 				FlushBuffer ();
 
