@@ -1,3 +1,8 @@
+2006-02-03  Zoltan Varga  <vargaz@gmail.com>
+
+	* Stream.cs FileStream.cs: Add new 2.0 Dispose () method and protected
+	Dispose (bool) method.
+
 2006-01-27 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* TextWriter.cs: Dispose () is public in 2.0.
